# xPyD-bench

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  (+1 more)
bot/: AUTHOR_POLICY.md  BOT_POLICY.md  DESIGN_PRINCIPLES.md  DEV_LOOP.md  REVIEW_POLICY.md
datasets/: README.md  sample.csv  sample.json  sample.jsonl
docs/: DESIGN_PRINCIPLES.md  guide.md
examples/: bench_config.yaml  plan_config.yaml  rate_burst.yaml  rate_constant.yaml  rate_custom.yaml  rate_ramp.yaml
scripts/: run_benchmark.sh
tests/: __init__.py  test_adaptive_shrink.py  test_adaptive_timeout.py  test_aggregate.py  test_anomaly.py  test_api_key.py  test_archive.py  test_autotune.py  test_baseline.py  test_batch.py  test_cache_savings.py  test_cache_test.py  test_chain.py  test_chat_params.py  test_checkpoint.py  test_cli.py  test_compare.py  test_compress.py  test_confidence_intervals.py  test_config_cmd.py  test_config_inheritance.py  test_config_known_keys.py  test_connection_pool.py  test_consistency.py  test_cost.py  test_csv_markdown_export.py  test_custom_headers.py  test_custom_percentiles.py  test_datasets.py  test_debug_log.py  test_dedup.py  test_diff.py  test_discover.py  test_distributed.py  test_dry_run.py  test_dummy.py  test_dummy_params.py  test_duration.py  test_embeddings.py  test_env_info.py  (+81 more)
xpyd_bench/: aggregate.py  archive.py  autotune.py  baseline.py  cache_test.py  chain.py  config_cmd.py  cost.py  diff.py  healthcheck.py  junit_xml.py  metrics_ws.py  model_compare.py  multi_turn.py  presets.py  tag_compare.py  tokenizer.py
(+97 files in other folders)
